--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -16,5 +16,8 @@
 
 
 <ion-content padding>
+  <ion-list *ngFor="let history of tabStorage">
+    <ion-item>{{history}}</ion-item>
+  </ion-list>
 
 </ion-content>
