--- a/src/pages/create-qr/create-qr.html
+++ b/src/pages/create-qr/create-qr.html
@@ -22,4 +22,7 @@
   <ion-item>
     <img src="{{qrImg}}"/>
   </ion-item>
+  <button ion-button [disabled]="!qrImg" (click)="share()">
+    Partager
+  </button>
 </ion-content>
