--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -17,7 +17,7 @@
 
 <ion-content padding>
   <ion-list *ngFor="let history of tabStorage">
-    <ion-item>{{history.date | date: 'dd/MM/yyyy'}}</ion-item>
+    <ion-item>{{history.date | date: 'dd/MM/yyyy HH:mm'}}</ion-item>
     <ion-item>{{history.text}}</ion-item>
   </ion-list>
 
